--- a/css/login.css
+++ b/css/login.css
@@ -19,7 +19,7 @@ body {
   background: white;
   position: relative;
   text-align: center;
-  margin: auto;
+  margin: 100px auto 180px auto;
   padding: 20px 0;
   box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0);
   overflow: hidden;
