--- a/css/header.css
+++ b/css/header.css
@@ -1,144 +1,206 @@
-a {
+/* *********************************
+           Variables
+  ********************************** */
+/* *********************************
+   Some Style Overrides on Bootstrap
+  ********************************** */
+.navbar-inverse {
+  background: rgba(62, 195, 246, 0);
+  border-bottom: none;
+}
+
+.navbar-inverse .navbar-toggle {
+  border: 1px solid #333;
+  border-color: rgba(255, 255, 255, 0.7);
+}
+
+.navbar-inverse .navbar-collapse,
+.navbar-inverse .navbar-form {
+  border-color: transparent;
+}
+@media (max-width: 767px) {
+  .navbar-inverse .navbar-collapse,
+  .navbar-inverse .navbar-form {
+    background: rgba(255, 255, 255, 0.75);
+  }
+}
+
+.navbar-inverse .navbar-nav > li > a {
+  color: black;
+}
+.navbar-inverse .navbar-nav > li > a > span {
+  background-color: gold;
+  padding: 7px 10px;
+  border-radius: 50%;
+}
+.navbar-inverse .navbar-nav > li > a:hover,
+.navbar-inverse .navbar-nav > li > a:focus {
+  background-color: white;
+  color: black;
+}
+.nav li {
+  font-weight: bold;
+  background-color: rgb(62, 195, 246);
+}
+
+/* *********************************
+           Toolbar Logo
+  ********************************** */
+.small-logo-container {
+  padding-top: 50px;
+  height: 50px;
+  overflow: hidden;
+  position: absolute;
+}
+
+.small-logo {
+  color: white;
+  font-size: 2.5em;
+  padding-bottom: 2px;
+  border-left: 0px solid black;
+  transition: border-left 0.3s ease-in-out;
+}
+.small-logo:hover {
   text-decoration: none;
+  border-left: 7px solid black;
   color: white;
 }
-a:hover,
-a:focus,
-a:active {
-  color: rgb(107, 199, 54);
+.nav .search-bar {
+  background-color: transparent;
 }
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  overflow: hidden;
+
+.search-bar input {
+  margin: 0px;
+  padding: 0px;
+  height: 50px;
+  width: auto;
+  font-weight: normal;
+  border: none;
+  text-align: center;
+  font-size: 20px;
+  border-bottom-left-radius: 20px;
+}
+.search-bar input:focus {
+  outline: none;
+}
+#cart-count {
+  width: 200px;
+}
+/* *********************************
+           Big Logo
+  ********************************** */
+.big-logo-row {
+  background: gold;
+}
+.big-logo-row .big-logo-container {
+  padding-top: 50px;
+}
+.big-logo-row h1 {
+  font-size: 4em;
+  margin: 0;
+  padding: 0 0 15px 0;
+}
+.big-logo a {
+  color: white !important;
+  border-left: 0px solid black;
+  transition: border-left 0.3s ease-in-out;
+}
+.big-logo a:hover {
   text-decoration: none;
-  display: block;
-  text-align: left;
+  border-left: 15px solid black;
+}
+/*********************************
+      Dropdown
+  ****************************/
+
+.dropbtn {
+  height: 50px;
+  border: none;
+  background-color: transparent;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.dropdown {
   position: relative;
-}
-.dropdown:hover .dropdown-content {
   display: block;
 }
+
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
+  background-color: #f1f1f1;
   min-width: 160px;
-  overflow: hidden;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
-.dropdown-content a:hover {
-  background-color: #f1f1f1;
-}
 
-.btn {
-  display: inline-block;
-  border-radius: 30px;
-  background-color: #ff523b;
-  margin: 30px 0px;
-  padding: 8px 30px;
-  color: #fff;
-}
-.head {
-  margin-top: 10px;
-  display: flex;
-  padding-left: 25px;
-  padding-right: 25px;
-}
-.head .kart h2 {
-  text-align: center;
-}
-.header {
-  margin: 100px 30px 30px 30px;
-
-  /*background:radial-gradient( #fff,rgb(53, 218, 154)) ;*/
-}
-nav {
-  flex: 1;
-  text-align: right;
-}
-nav ul {
-  list-style: none;
-  display: inline-block;
-  background-color: #154c79;
-  border-radius: 2px;
-}
-nav ul li {
-  display: inline-block;
-  margin: 10px;
-  padding-right: 15px;
-}
-nav ul li a {
-  text-decoration: none;
-  color: #fff;
-}
-.logo img {
-  border-radius: 40%;
-  margin-top: 10px;
-  margin-right: 20px;
-  background: lightblue;
-  background: radial-gradient(white 30%, lightblue 70%);
-}
-
-.tag h6 {
-  margin: 20px;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  padding: 20px;
+.dropdown-content a {
   color: black;
-
-  text-align: center;
-  font-family: cursive;
-  background: radial-gradient(#fff, #9f9f9f);
-  border-radius: 4%;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+.dropdown:hover {
+  background-color: white;
+}
+.dropdown-content a:hover {
+  background-color: #ddd;
 }
 
-.name a {
-  color: rgb(107, 199, 54);
+.dropdown:hover .dropdown-content {
+  display: block;
 }
-.name {
-  margin-left: 5px;
-}
-.name h2 {
-  font-family: monospace;
-  font-size: 20px;
-  padding-left: 10px;
-  margin-right: 5px;
-  margin-top: -45px;
-}
-.upper-part {
-  background: radial-gradient(#fff, #0c2e61);
-  padding-bottom: 10px;
-}
-.kart h2 {
-  color: aliceblue;
-  font-family: cursive;
-}
-#cart_count {
-  color: rgb(5, 211, 142);
-  font-weight: bold;
-  text-align: center;
-  padding: 0 0.9rem 0.1rem 0.9rem;
-  border-radius: 3rem;
-}
-/* search */
 
-.search-container {
-  width: 400px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.dropdown:hover .dropbtn {
+  background-color: white;
 }
-.search-container input {
-  width: 300px;
-  height: 80px;
-  border: none;
+#alert-message {
+  position: fixed;
+  bottom: 0;
   text-align: center;
-  /* border-radius: 20%; */
+  height: 40px;
+  width: 100vw;
+  font-size: 30px;
+  background-color: rgb(197, 255, 233);
+  font-weight: 600;
+  transition: 0.3s ease-in-out;
+  z-index: 100;
 }
-.search-container button {
-  width: 50px;
-  height: 80px;
-  border: none;
+.hide-alert {
+  transform: translateY(60px);
+}
+.show-alert {
+  transform: translateY(0px);
+}
+@media (min-width: 400px) {
+  .big-logo-row h1 {
+    font-size: 4.5em;
+  }
+}
+@media (min-width: 440px) {
+  .big-logo-row h1 {
+    font-size: 5.5em;
+  }
+}
+@media (min-width: 500px) {
+  .big-logo-row h1 {
+    font-size: 6.5em;
+  }
+}
+@media (min-width: 630px) {
+  .big-logo-row h1 {
+    font-size: 7.5em;
+  }
+}
+@media (min-width: 768px) {
+  .big-logo-row h1 {
+    font-size: 9em;
+    padding-bottom: 30px;
+  }
+}
+@media (min-width: 1200px) {
+  .big-logo-row h1 {
+    font-size: 12em;
+  }
 }
