container-2 widh changed

--- a/css/project.css
+++ b/css/project.css
@@ -76,6 +76,7 @@ body {
   margin-top: 30px;
   justify-content: space-evenly;
   margin-bottom: 50px;
+  width: 100vw;
 }
 #trend {
   height: 100px;
