--- a/css/project.css
+++ b/css/project.css
@@ -77,6 +77,7 @@ body {
   justify-content: space-evenly;
   margin-bottom: 50px;
   width: 100vw;
+  overflow: hidden;
 }
 #trend {
   height: 100px;
