--- a/css/header.css
+++ b/css/header.css
@@ -194,11 +194,29 @@
   }
 }
 @media (min-width: 768px) {
+  .navbar-collapse.collapse {
+    display: none !important;
+  }
+  .navbar-toggle {
+    display: initial;
+  }
+  .navbar-header {
+    float: right;
+  }
+}
+@media (min-width: 900px) {
   .big-logo-row h1 {
     font-size: 9em;
     padding-bottom: 30px;
   }
+  .navbar-toggle {
+    display: none;
+  }
+  .navbar-collapse.collapse {
+    display: block !important;
+  }
 }
+
 @media (min-width: 1200px) {
   .big-logo-row h1 {
     font-size: 12em;
